small cleanups